create view form.

--- a/force-app/main/default/lwc/demo/demo.html
+++ b/force-app/main/default/lwc/demo/demo.html
@@ -1,3 +1,16 @@
 <template>
+    <lightning-card title="Property Demo" icon-name=
+    "custom:custom54">
+    <div class="slds-m-around_small">
+        <lightning-input value={message}
+        label="Private Property"
+        placeholder="Non Reactive Property"
+        onchange={handleChange}
+        ></lightning-input>
+        <div>
+            message is : {message}
+        </div>
+    </div>
+</lightning-card>
     
 </template>
